--- a/style.css
+++ b/style.css
@@ -443,9 +443,25 @@ main h4{
         background: rgb(255, 165, 0);
     }
 
-    .container{
+    .Container{
         display: flex;
         flex-direction: column;
+        margin: 0 0 5% 40px ;
+    }
+
+    .Contact h5{
+        /* font-weight: bold; */
+        font-size: 17px;
+    }
+
+    .container label{
+        font-weight: bold;
+        font-size: 17px;
+    }
+
+    .Contact{
+        display: inline-block;
+        margin-right: 20%;
     }
 
    .form1{
@@ -457,7 +473,111 @@ main h4{
         display: flex;
         flex-direction: column;
    }
+
+   .first-name{
+     margin-top: 3px;
+        width: 300px;
+   }
+
+   .msg{
+    width: 300px;
+    height: 55px;
+   }
+
+   .btn{
+    margin-top: 10px;
+    width: 150px;
+    height: 3rem;
+   }
+   .last-name{
+    margin-top: 2px;
+     width: 300px;
+   }
    
+   .main {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+   }
+
+   .main .projet1{
+    display: flex;
+    flex-direction: column;
+   }
+
+   main h4{
+    font-size: 20px;
+    text-align: center;
+    margin:2rem 0 1rem 0;
+   }
    
+   .projet-para{
+    width: 100%;
+    font-size: 20px;
+   }
+
+   .structure{
+   
+   }
+
+   .structure h1{
+    width: 70%;
+    font-size: 30px;
+    margin: 0 0 5% 10%;
+   }
+
+   .structure h2{
+    /* margin: 0 0 2% 0; */
+   }
+
+   .structure h5{
+    width: 100%;
+    font-weight: bold;
+    margin: 2% 0 0 0;
+    color: brown;
+   }
+
+   .date1{
+    position: absolute;
+    left: 75%;
+    width: 30%;
+    background-color: #555555;
+    color: #fff;
+    padding: 1%;
+   }
+
+   .date2{
+    position: absolute;
+    left: 75%;
+    width: 30%;
+    background-color: #555555;
+    color: #fff;
+    padding: 1%;
+   }
+
+   .date3{
+    position: absolute;
+    left: 75%;
+    width: 30%;
+    background-color: #555555;
+    color: #fff;
+    padding: 1%;
+   }
+
+   .div1-lorum{
+    width: 85%;
+   }
+
+   .sous-titre{
+    width: 80%;
+   }
+
+   .metier{
+    background-color: #f5f3f3;
+    width: 70%;
+    padding: 10px;
+    border: none;
+    border-radius: 5%;
+   }
 }
 
